--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: TRANP345 FIRST CODING PROJECT
+author: tranp345  
+email: tranp345@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  
+  Study path: 1.Github 2.Tableau 3.Python Pandas 4.SQL 5.Data Analysis 6.Machine Learning
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: tranp345
+github_username:  tranp345
 
 show_excerpts: true # set to false to remove excerpts on the homepage
